--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!--Funcion-->
 <section id="Funcion" class="container-fluid">
-      <h2 class="text-center ">¿Que somos?</h2>
+      <h2 class="text-center ">¿Qué somos?</h2>
       <p class="text-center">Somos ese amigo que te hace 
         el aguante cuando no queres o
         no podes salir a buscar tu comida,
